--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-email: b@banjiewen.net
+email: ba@b20n.net
 baseurl: ""
-url: "http://banjiewen.net" # the base hostname & protocol for your site
-twitter_username: banjiewen
-github_username:  banjiewen
+url: "http://b20n.net" # the base hostname & protocol for your site
+twitter_username: _b20n
+github_username:  b20n
 permalink: /:slug.html
 
 # Build settings
